--- a/templates/pages/404.html
+++ b/templates/pages/404.html
@@ -1,47 +1,7 @@
-<!DOCTYPE html>
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="ie ie9" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
-<!--<![endif]-->
-<html lang="en">
-
-
-<!-- 40410:55-->
-<head>
-    <!-- Basic Page Needs -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <title>Furnitica - Minimalist Furniture HTML Template</title>
-
-    <meta name="keywords" content="Furniture, Decor, Interior">
-    <meta name="description" content="Furnitica - Minimalist Furniture HTML Template">
-    <meta name="author" content="tivatheme">
-
-
-    <!-- Mobile Meta -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">
-
-    <!-- Vendor CSS -->
-    <link rel="stylesheet" href="{% static 'libs/bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/font-awesome/css/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/nivo-slider/css/nivo-slider.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/nivo-slider/css/animate.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/nivo-slider/css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/font-material/css/material-design-iconic-font.min.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/slider-range/css/jslider.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/owl-carousel/assets/owl.carousel.min.css' %}">
-
-    <!-- Template CSS -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/reponsive.css">
-</head>
-
-<body id="page-404" class="blog">
-
-    <!-- main content -->
+{% extends 'layouts/baes.hml' %}
+{% load static %}
+{% block title %}id="page-404" class="blog"{% endblock %}
+{% block content %}
     <div class="main-content">
         <div id="wrapper-site">
             <div id="content-wrapper">
@@ -73,23 +33,4 @@
             </div>
         </div>
     </div>
-
-
-    <!-- Vendor JS -->
-    <script src="{% static 'libs/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'libs/popper/popper.min.js' %}"></script>
-    <script src="{% static 'libs/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'libs/nivo-slider/js/jquery.nivo.slider.js' %}"></script>
-    <script src="{% static 'libs/owl-carousel/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'libs/slider-range/js/tmpl.js' %}"></script>
-    <script src="{% static 'libs/slider-range/js/jquery.depend' %}Class-0.1.js"></script>
-    <script src="{% static 'libs/slider-range/js/draggable-0.1.js' %}"></script>
-    <script src="{% static 'libs/slider-range/js/jquery.slider.js' %}"></script>
-
-    <!-- Template JS -->
-    <script src="js/theme.js"></script>
-</body>
-
-
-<!-- 40410:56-->
-</html>
+{% endblock %}
