--- a/templates/layouts/base_header.html
+++ b/templates/layouts/base_header.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load my_tags %}
+{% load i18n %}
 <header>
     <!-- header left mobie -->
     <div class="header-mobile d-md-none">
@@ -11,7 +13,7 @@
 
             <!-- logo -->
             <div class="mobile-logo">
-                <a href="index-2.html">
+                <a href="home3.html">
                     <img class="logo-mobile img-fluid" src="{% static 'img/home/logo-mobie.png' %}" alt="Prestashop_Furnitica">
                 </a>
             </div>
@@ -27,7 +29,7 @@
             <div id="mobile_search_content">
                 <form method="get" action="#">
 
-                    <input type="text" name="s" value="" placeholder="Search">
+                    <input type="text" name="s" value="" placeholder="{% trans 'Search' %}">
                     <button type="submit">
                         <i class="fa fa-search"></i>
                     </button>
@@ -65,7 +67,7 @@
                                         </td>
                                     </tr>
                                     <tr class="total">
-                                        <td colspan="2">Total:</td>
+                                        <td colspan="2">{% trans 'Total:' %}</td>
                                         <td>£92.96</td>
                                     </tr>
 
@@ -85,47 +87,36 @@
             </div>
         </div>
     </div>
-
-    <!-- header desktop -->
-    <div class="header-top d-xs-none ">
+    <div class="topbar">
         <div class="container">
             <div class="row">
-                <!-- logo -->
-                <div class="col-sm-2 col-md-2 d-flex align-items-center">
-                    <div id="logo">
-                        <a href="index-2.html">
-                            <img src="{% static 'img/home/logo.png' %}" alt="logo" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
                 <!-- menu -->
-                <div class="col-sm-5 col-md-5 align-items-center justify-content-center navbar-expand-md main-menu">
+                <div class="main-menu d-flex align-items-center justify-content-start navbar-expand-md col-md-6">
                     <div class="menu navbar collapse navbar-collapse">
                         <ul class="menu-top navbar-nav">
-                            <li>
-                                <a href="#" class="parent">Home</a>
+                            <li class="nav-link">
+                                <a href="#" class="parent">{% trans 'Home' %}</a>
                                 <div class="dropdown-menu">
                                     <ul>
                                         <li class="item">
-                                            <a href="index-2.html" title="Home Page 1">Home Page 1</a>
+                                            <a href="index-2.html" title="Home Page 1">{% trans 'Home Page' %} 1</a>
                                         </li>
                                         <li class="item">
-                                            <a href="home2.html" title="Home Page 2">Home Page 2</a>
+                                            <a href="home2.html" title="Home Page 2">{% trans 'Home Page 2' %}</a>
                                         </li>
                                         <li class="item">
-                                            <a href="home3.html" title="Home Page 3">Home Page 3</a>
+                                            <a href="home3.html" title="Home Page 3">{% trans 'Home Page 3' %}</a>
                                         </li>
                                         <li class="item">
-                                            <a href="home4.html" title="Home Page 4">Home Page 4</a>
+                                            <a href="home4.html" title="Home Page 4">{% trans 'Home Page 4' %}</a>
                                         </li>
                                         <li class="item">
-                                            <a href="home5.html" title="Home Page 5">Home Page 5</a>
+                                            <a href="home5.html" title="Home Page 5">{% trans 'Home Page 5' %}  </a>
                                         </li>
                                     </ul>
                                 </div>
                             </li>
-                            <li class="nav-link">
+                            <li>
                                 <a href="#" class="parent">Blog</a>
                                 <div class="dropdown-menu">
                                     <ul>
@@ -151,7 +142,7 @@
                                 </div>
                             </li>
                             <li>
-                                <a href="#" class="parent">Page</a>
+                                <a href="#" class="parent">{% trans 'Page' %}</a>
                                 <div class="dropdown-menu drop-tab">
                                     <ul>
                                         <li class="item container group">
@@ -206,65 +197,54 @@
                                 </div>
                             </li>
                             <li>
-                                <a href="contact.html" class="parent">Contact US</a>
+                                <a href="contact.html" class="parent">{% trans 'Contact US' %}</a>
                             </li>
                         </ul>
                     </div>
                 </div>
 
-                <!-- search and acount -->
-                <div class="col-sm-5 col-md-5 d-flex align-items-center justify-content-end" id="search_widget">
-                    <form method="get" action="#">
+                <!-- search_widget -->
+                <div class="search_widget col-lg-6 col-md-6 d-flex justify-content-end hidden-xs">
 
-                        <span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span>
-                        <input type="text" name="s" value="" placeholder="Search" class="ui-autocomplete-input" autocomplete="off">
-                        <button type="submit">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </form>
-
-                    <div id="block_myaccount_infos" class="hidden-sm-down dropdown">
-                        <div class="myaccount-title ">
+                    <!-- My Account -->
+                    <div id="block_myaccount_info" class="hidden-sm-down dropdown d-flex align-items-center">
+                        <div class="myaccount-title">
+                            <i class="fa fa-user" aria-hidden="true"></i>
                             <a href="#acount" data-toggle="collapse" class="acount">
-                                <i class="fa fa-user" aria-hidden="true"></i>
-                                <span>Account</span>
+                                <span>{% trans 'My Account' %}</span>
                                 <i class="fa fa-angle-down" aria-hidden="true"></i>
                             </a>
-
                         </div>
-
                         <div id="acount" class="collapse">
-
                             <div class="account-list-content">
-
                                 <div>
                                     <a class="login" href="user-acount.html" rel="nofollow" title="Log in to your customer account">
                                         <i class="fa fa-cog"></i>
-                                        <span>My Account</span>
+                                        <span>{% trans 'My Account' %}</span>
                                     </a>
                                 </div>
                                 <div>
                                     <a class="login" href="user-login.html" rel="nofollow" title="Log in to your customer account">
                                         <i class="fa fa-sign-in"></i>
-                                        <span>Sign in</span>
+                                        <span>{% trans 'Log in' %}</span>
                                     </a>
                                 </div>
                                 <div>
                                     <a class="register" href="user-register.html" rel="nofollow" title="Register Account">
                                         <i class="fa fa-user"></i>
-                                        <span>Register Account</span>
+                                        <span>{% trans 'Register Account' %}</span>
                                     </a>
                                 </div>
                                 <div>
                                     <a class="check-out" href="product-checkout.html" rel="nofollow" title="Checkout">
-                                        <i class="fa fa-check" aria-hidden="true"></i>
-                                        <span>Checkout</span>
+                                        <i class="fa fa-check" aria-hidden="true"></i>{% trans 'Checkout' %}
                                     </a>
                                 </div>
+
                                 <div class="link_wishlist">
                                     <a href="user-wishlist.html" title="My Wishlists">
                                         <i class="fa fa-heart"></i>
-                                        <span>My Wishlists</span>
+                                        <span>{% trans 'My Wishlists' %}</span>
                                     </a>
                                 </div>
                                 <div id="desktop_currency_selector" class="currency-selector groups-selector hidden-sm-down">
@@ -279,19 +259,19 @@
                                 </div>
                                 <div id="desktop_language_selector" class="language-selector groups-selector hidden-sm-down">
                                     <ul class="list-inline">
-                                        <li class="list-inline-itemcurrent">
-                                            <a href="#">
+                                        <li class="list-inline-item current">
+                                            <a href="http://127.0.0.1:8000/en/about/">
                                                 <img class="img-fluid" src="{% static 'img/home/home1-flas.jpg' %}" alt="English" width="16" height="11">
                                             </a>
                                         </li>
                                         <li class="list-inline-item">
-                                            <a href="#">
-                                                <img class="img-fluid" src="{% static 'img/home/home1-flas2.jpg' %}" alt="Italiano" width="16" height="11">
+                                            <a href="http://127.0.0.1:8000/uz/about/">
+                                                <img class="img-fluid" src="{% static 'img/home/home1-flas2.jpg' %}" alt="Uzbek" width="16" height="11">
                                             </a>
                                         </li>
                                         <li class="list-inline-item">
                                             <a href="#">
-                                                <img class="img-fluid" src="{% static 'img/home/home1-flas3.jpg' %}" alt="Français" width="16" height="11">
+                                                <img class="img-fluid" src="{% static 'img/home/home1-flas3.jpg' %}" alt="Francais" width="16" height="11">
                                             </a>
                                         </li>
                                         <li class="list-inline-item">
@@ -304,6 +284,121 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- currency -->
+                    <div class="desktop-currency-selector hidden-sm-down dropdown d-flex align-items-center">
+                        <div class="dropdown-currency myaccount-title">
+                            <a href="#currency" data-toggle="collapse" class="acount">
+                                <span class="expand-more">GBP</span>
+                                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                        <div id="currency" class="collapse">
+                            <div class="currency-item currency-list-content acount">
+                                <a title="Euro" rel="nofollow" href="#">
+                                    <span>€</span>EUR</a>
+                            </div>
+                            <div class="currency-item current flex-first">
+                                <a title="British Pound Sterling" rel="nofollow" href="#">
+                                    <span>£</span>GBP</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- language -->
+                    <div class="desktop-language-selector language-selector groups-selector hidden-sm-down d-flex align-items-center">
+                        <div class="dropdown-language myaccount-title">
+                            <a href="#language" data-toggle="collapse" class="acount">
+                                <span class="expand-more">
+                                    <img class="img-fluid" src="{% static 'img/home/lg1.jpg' %}" alt="English" width="16" height="11">
+                                </span>
+                                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                        <div id="language" class="collapse">
+                            <div class="language-list-content">
+                                {% get_available_languages as all_langs %}
+                                {% get_current_language as lang %}
+                                {% for l in all_langs %}
+                                    <div class="language-item current flex-first language-list-content">
+                                        <a href="{% get_lang_url request l.0 %}">
+                                            <img class="img-fluid" src="{% static 'img/home/lg1.jpg' %}" alt="English" width="16" height="11">
+                                            <span>{{ l.0 }}</span>
+                                        </a>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- header desktop -->
+    <div class="header-top d-xs-none">
+        <div class="container">
+            <div class="row">
+                <!-- logo -->
+                <div class="col-sm-8 col-md-4 align-items-center">
+                    <div class="vertical-header d-flex align-items-center">
+                        <div class="dropdown vertical-dropdown has-showmore" data-textshowmore="Show More" data-textless="Hide" data-desktop_item="5">
+                            <div data-toggle="collapse" data-target="#show-menu">
+                                <div id="nav_icon3">
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="logo">
+                            <a href="home3.html">
+                                <img src="{% static 'img/home/logo.png' %}" alt="logo">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!--policy-->
+                <div class="policy-home col-sm-0 col-md-5 d-flex justify-content-start">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="block">
+                            <div class="block-content">
+                                <div class="policy-item">
+                                    <div class="policy-content iconpolicy1">
+                                        <img src="{% static 'img/home/home1-policy.png' %}" alt="img">
+                                        <div>{% trans 'FREE DELIVERY' %}</div>
+                                        <div>{% trans 'From $ 250' %}</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tiva-html col-lg-5 col-md-5">
+                        <div class="block">
+                            <div class="block-content">
+                                <div class="policy-item">
+                                    <div class="policy-content iconpolicy3">
+                                        <img src="{% static 'img/home/home1-policy3.png' %}" alt="img">
+                                        <div>{% trans 'MONEY BACK' %}</div>
+                                        <div>{% trans 'GUARANTEED' %}</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- search -->
+                <div id="search_widget" class="col-sm-4 col-md-3 align-items-center justify-content-start d-flex">
+                    <form method="get" action="#">
+
+                        <span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span>
+                        <input type="text" name="s" value="" placeholder="{% trans 'Search' %}" class="ui-autocomplete-input" autocomplete="off">
+                        <button type="button">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </form>
+
                     <div class="desktop_cart">
                         <div class="blockcart block-cart cart-preview tiva-toggle">
                             <div class="header-cart tiva-toggle-btn">
@@ -339,12 +434,11 @@
                                                 <td colspan="2">Total:</td>
                                                 <td>£92.96</td>
                                             </tr>
-
                                             <tr>
                                                 <td colspan="3" class="d-flex justify-content-center">
                                                     <div class="cart-button">
-                                                        <a href="product-cart.html" title="View Cart">View Cart</a>
-                                                        <a href="product-checkout.html" title="Checkout">Checkout</a>
+                                                        <a href="product-cart.html" title="View Cart">{% trans 'View Cart' %}</a>
+                                                        <a href="product-checkout.html" title="Checkout">{% trans 'Checkout' %}</a>
                                                     </div>
                                                 </td>
                                             </tr>
