--- a/templates/pages/about-us.html
+++ b/templates/pages/about-us.html
@@ -1,11 +1,14 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
-{% block title %}id="about-us" class="blog"{% endblock %}
+{% load i18n %}
+
+{% block body %}id="about-us" class="blog"{% endblock %}
+
 {% block content %}
 	<div class="main-content">
 		<div id="wrapper-site">
 			<div id="content-wrapper">
-				
+					
 				<!-- breadcrumb -->
 				<nav class="breadcrumb-bg">
 					<div class="container no-index">
