--- a/templates/home3.html
+++ b/templates/home3.html
@@ -2038,7 +2038,7 @@
                                     <div class="news-content">
                                         <div class="tiva-modules">
                                             <div class="block">
-                                                <div class="title-block">Newsletter</div>
+                                                <div class="title-block">{% trans 'Newsletter' %}</div>
                                                 <div class="sub-title">Sign up to our newsletter to get the latest articles, lookbooks voucher codes
                                                     direct to your inbox</div>
                                                 <div class="block-newsletter">
@@ -2047,7 +2047,7 @@
                                                             <input type="text" class="form-control" name="email" value="" placeholder="Enter Your Email">
                                                             <span class="input-group-btn">
                                                                 <button class="effect-btn btn btn-secondary" name="submitNewsletter" type="submit">
-                                                                    <span>subscribe</span>
+                                                                    <span>{trans 'subscribe' %}</span>
                                                                 </button>
                                                             </span>
                                                         </div>
