--- a/templates/layouts/base_header.html
+++ b/templates/layouts/base_header.html
@@ -99,19 +99,7 @@
                                 <div class="dropdown-menu">
                                     <ul>
                                         <li class="item">
-                                            <a href="index-2.html" title="Home Page 1">{% trans 'Home Page' %} 1</a>
-                                        </li>
-                                        <li class="item">
-                                            <a href="home2.html" title="Home Page 2">{% trans 'Home Page 2' %}</a>
-                                        </li>
-                                        <li class="item">
-                                            <a href="home3.html" title="Home Page 3">{% trans 'Home Page 3' %}</a>
-                                        </li>
-                                        <li class="item">
-                                            <a href="home4.html" title="Home Page 4">{% trans 'Home Page 4' %}</a>
-                                        </li>
-                                        <li class="item">
-                                            <a href="home5.html" title="Home Page 5">{% trans 'Home Page 5' %}  </a>
+                                            <a href="{% url 'pages:home'%}" title="{% trans 'Home Page' %}">{% trans 'Home Page' %}</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -121,22 +109,10 @@
                                 <div class="dropdown-menu">
                                     <ul>
                                         <li class="item">
-                                            <a href="blog-list-sidebar-left.html" title="Blog List (Sidebar Left)">Blog List (Sidebar Left)</a>
+                                            <a href="{% url 'blogs:list' %}" title="Blog List (Sidebar Left)">{% trans 'Blog List (Sidebar Left)' %}</a>
                                         </li>
                                         <li class="item">
-                                            <a href="blog-list-sidebar-left2.html" title="Blog List (Sidebar Left) 2">Blog List (Sidebar Left) 2</a>
-                                        </li>
-                                        <li class="item">
-                                            <a href="blog-list-sidebar-right.html" title="Category Blog (Right column)">Blog List (Sidebar Right)</a>
-                                        </li>
-                                        <li class="item">
-                                            <a href="blog-list-no-sidebar.html" title="Blog List (No Sidebar)">Blog List (No Sidebar)</a>
-                                        </li>
-                                        <li class="item">
-                                            <a href="blog-grid-no-sidebar.html" title="Blog Grid (No Sidebar)">Blog Grid (No Sidebar)</a>
-                                        </li>
-                                        <li class="item">
-                                            <a href="blog-detail.html" title="Blog Detail">Blog Detail</a>
+                                            <a href="{% url 'blogs:detail' %}" title="Blog Detail">{% trans 'Blog Detail' %}</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -153,7 +129,7 @@
                                                         <div class="menu-content">
                                                             <ul class="col">
                                                                 <li>
-                                                                    <a href="product-grid-sidebar-left.html">Product Grid (Sidebar Left)</a>
+                                                                    <a href="{% url 'blogs:list' %}">Product Grid (Sidebar Left)</a>
                                                                 </li>
                                                                 <li>
                                                                     <a href="product-grid-sidebar-right.html">Product Grid (Sidebar Right)</a>
