--- a/templates/products/product-detail.html
+++ b/templates/products/product-detail.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
-{% block title %}id="product-detail"{% endblock %}
+{% block body %}id="product-detail"{% endblock %}
 {% block content %}
     <div class="main-content">
         <div id="wrapper-site">
